--- a/config.ini
+++ b/config.ini
@@ -4,7 +4,7 @@
 ################################## Paths ################################################
 [Paths]
 
-out_dir =  ./Results/                           # main directory for all the outputs 
+out_dir =  ./lensdisc_output/                          # main directory for all the outputs 
 out_levin = 1D/                                # path results Levin method 
 out_hist = 2D/                                 # path results Histogram method 
 
@@ -14,23 +14,9 @@ out_hist = 2D/                                 # path results Histogram method
 
 add_units=False                                # Boolean, if False the results will have unitless frequencies.
                                                # If False the results will be dimensionless 
-M = 1.0                                        # mass of the lens in solar masses 
-D_l = 1.0                                      # distance of the lens in kpc 
-D_s = 1.0                                      # distance of the source in kpc 
-
-
-################################## HistInfo ##############################################
-[HistInfo]
-
-lens_model= point                              # String. Lens model, supported models: point, SIS. 
-xL =       0.1,0.1                             # lens position, source is in the center. distance lens-source.
-#external shear 
-#N.B. the value of kappa + gamma has to be smaller than 1, i.e. in the range [0,1) 
-
-kappa =         0.0                            # Convergence of external shear
-                                               # float (positive number, default=0)
-gamma =         0.0                            # Shear of external shear.
-                                               # float (positive number, default=0)
+M = 50.0                                       # mass of the lens in solar masses 
+D_l = 10.0                                     # distance of the lens in Mpc 
+D_s = 100.0                                    # distance of the source in Mpc 
 
 
 ################################## LevinInfo ##############################################
@@ -39,18 +25,36 @@ gamma =         0.0                            # Shear of external shear.
 lens_model= SIScore                            # String. Lens model, supported models: 
 						                       # point, SIScore , softenedpowerlaw, softenedpowerlawkappa. 
                                                # str 
-xL =       0.1                                 # distance lens-source.  
+xL =       0.1                                 # radial distance lens-source - in units of Einstein radius  
+                                               # positive float 
 w = 0.001,100,1000		               		   # frequency range and amount of points 
 #lens parameters 
 a =         1.0                                # Amplitude parameter. 
-                                               # float ( default=1)
-b =         0.5                                # Core value
-                                               # float ( default=0, range=[0,1])
+                                               # float (default=1)
+b =         0                                  # Core value
+                                               # float (default=0, range=[0,1])
 p =         1.0                                # power law value 
-                                               # float ( default=1) 
+                                               # float (default=1) 
                                                # softenedpowerlawkappa p<1. softenedpowerlaw range (0,2) 
-typesub = Adaptive                             # type of subdivision (Adaptive or Fixed), default Adaptive. 
-                                               # Fixed to divide integral in fixed steps, less accurate for certain models. 
+typesub = Fixed                                # type of subdivision (Adaptive or Fixed), default Fixed. 
+                                               # Fixed divides integral in fixed steps, can be less accurate for certain models but faster. 
+N_step = 50                                    # For fixed subdivision, amount of steps in the range. For Adaptive first guess of steps. 
+                                               # integer (default=50) 
+
+
+################################## HistInfo ##############################################
+[HistInfo]
+
+lens_model= point                              # String. Lens model, supported models: point, SIS. 
+xL =       0.1,0.1                             # lens position, source is in the center - coordinates in the source plane 
+                                               # in units of Einstein radius 
+#external shear 
+#N.B. the value of kappa + gamma has to be smaller than 1, i.e. in the range [0,1) 
+
+kappa =         0.0                            # Convergence of external shear
+                                               # float (positive number, default=0)
+gamma =         0.0                            # Shear of external shear.
+                                               # float (positive number, default=0)
 
 
 ################################## Plots ##############################################
